# notifier

./: Cargo.toml  notifier.sh
notifier_client/: Cargo.toml
notifier_client/src/: main.rs
notifier_common/: Cargo.toml
notifier_common/src/: lib.rs
notifier_server/: Cargo.toml
notifier_server/src/: main.rs
src/: main.rs
